2019-11-09  John Darrington  <john@darrington.wattle.id.au>

	* src/ras: Correct punctuation in default error message.

2019-11-09  John Darrington  <john@darrington.wattle.id.au>

	* src/pk-editor.c (pk_cmd_editor): Use xrealloc instead of
	realloc.

2019-11-09  John Darrington  <john@darrington.wattle.id.au>

	* src/pk-editor.c (pk_cmd_editor): Fix memory leak.

2019-11-09  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Make libreadline a hard requirement.
	* HACKING (readline): Document that now a full implementation of
	readline is required.

2019-11-09  Egeyar Bagcioglu  <egeyar@gmail.com>

	* testsuite/poke.map/maps-int-01.pk: New test.
	* testsuite/poke.map/maps-int-02.pk: Likewise.
	* testsuite/poke.map/maps-int-03.pk: Likewise.
	* testsuite/poke.map/maps-int-04.pk: Likewise.
	* testsuite/poke.map/maps-int-05.pk: Likewise.
	* testsuite/poke.map/maps-int-06.pk: Likewise.
	* testsuite/poke.map/maps-int-07.pk: Likewise.
	* testsuite/poke.map/maps-int-08.pk: Likewise.
	* testsuite/poke.map/maps-int-09.pk: Likewise.
	* testsuite/poke.map/maps-int-10.pk: Likewise.
	* testsuite/poke.map/maps-int-11.pk: Likewise.
	* testsuite/poke.map/maps-int-12.pk: Likewise.
	* testsuite/poke.map/maps-int-13.pk: Likewise.
	* testsuite/poke.map/maps-int-14.pk: Likewise.
	* testsuite/poke.map/maps-int-15.pk: Likewise.
	* testsuite/poke.map/maps-int-16.pk: Likewise.
	* testsuite/poke.map/maps-int-17.pk: Likewise.
	* testsuite/poke.map/maps-int-18.pk: Likewise.
	* testsuite/poke.map/maps-int-19.pk: Likewise.
	* testsuite/poke.map/maps-int-20.pk: Likewise.
	* testsuite/poke.map/maps-int-21.pk: Likewise.
	* testsuite/poke.map/maps-int-22.pk: Likewise.
	* testsuite/poke.map/maps-int-23.pk: Likewise.
	* testsuite/poke.map/maps-int-24.pk: Likewise.
	* testsuite/poke.map/maps-int-25.pk: Likewise.
	* testsuite/poke.map/maps-int-26.pk: Likewise.
	* testsuite/poke.map/maps-int-27.pk: Likewise.
	* testsuite/poke.map/maps-int-28.pk: Likewise.